# github-claudeCode-self-healing-tests

./: .gitignore  CHECKLIST.md  CHECKLIST.md:Zone.Identifier  INSTALLATION_SUMMARY.md  INSTALLATION_SUMMARY.md:Zone.Identifier  README.md  README.md:Zone.Identifier  SETUP_PAT.md  START_HERE.md  START_HERE.md:Zone.Identifier  WORKFLOW_DIAGRAM.md  WORKFLOW_DIAGRAM.md:Zone.Identifier  pyproject.toml  requirements-dev.txt  setup.sh  setup.sh:Zone.Identifier  test_automation_demo.py  test_demo.py  test_output.txt
.github/workflows/: automated-test-fix.yml  automated-test-fix.yml:Zone.Identifier  ci.yml  claude-code-assistant.yml  claude-code-assistant.yml:Zone.Identifier
