[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.1.0"
description = "A simple test repository"
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
